TI-113 - rename Status.java into NotificationStatus.java